update swagger and readme
